--- a/cmake/vectorpp-config.cmake.in
+++ b/cmake/vectorpp-config.cmake.in
@@ -1,12 +1,12 @@
-# CMake package config file for mylib library.
+# CMake package config file for vectorpp library.
 #
 # The following target is imported:
 #
-#   mylib::mylib
+#   vectorpp::vectorpp
 #
 # Type of target to import (static or shared) is determined by the following algorithm:
 #
-#   1. if MYLIB_SHARED_LIBS is defined and:
+#   1. if VECTORPP_SHARED_LIBS is defined and:
 #     1.1 is true, then import shared library target or issue error
 #     1.2 is false, then import static library target or issue error
 #
@@ -20,33 +20,33 @@
 @PACKAGE_INIT@
 
 macro(import_targets type)
-    if(NOT EXISTS "${CMAKE_CURRENT_LIST_DIR}/mylib-${type}-targets.cmake")
-        set(${CMAKE_FIND_PACKAGE_NAME}_NOT_FOUND_MESSAGE "mylib ${type} libraries were requested but not found")
+    if(NOT EXISTS "${CMAKE_CURRENT_LIST_DIR}/vectorpp-${type}-targets.cmake")
+        set(${CMAKE_FIND_PACKAGE_NAME}_NOT_FOUND_MESSAGE "vectorpp ${type} libraries were requested but not found")
         set(${CMAKE_FIND_PACKAGE_NAME}_FOUND OFF)
         return()
     endif()
 
-    include("${CMAKE_CURRENT_LIST_DIR}/mylib-${type}-targets.cmake")
+    include("${CMAKE_CURRENT_LIST_DIR}/vectorpp-${type}-targets.cmake")
 endmacro()
 
-if(NOT TARGET mylib::mylib)
+if(NOT TARGET vectorpp::vectorpp)
     set(type "")
 
-    if(DEFINED MYLIB_SHARED_LIBS)
-        if(MYLIB_SHARED_LIBS)
+    if(DEFINED VECTORPP_SHARED_LIBS)
+        if(VECTORPP_SHARED_LIBS)
             set(type "shared")
         else()
             set(type "static")
         endif()
-    elseif(BUILD_SHARED_LIBS AND EXISTS "${CMAKE_CURRENT_LIST_DIR}/mylib-shared-targets.cmake")
+    elseif(BUILD_SHARED_LIBS AND EXISTS "${CMAKE_CURRENT_LIST_DIR}/vectorpp-shared-targets.cmake")
         set(type "shared")
-    elseif(EXISTS "${CMAKE_CURRENT_LIST_DIR}/mylib-static-targets.cmake")
+    elseif(EXISTS "${CMAKE_CURRENT_LIST_DIR}/vectorpp-static-targets.cmake")
         set(type "static")
     else()
         set(type "shared")
     endif()
 
     import_targets(${type})
-    check_required_components(mylib)
-    message("-- Found ${type} mylib (version ${${CMAKE_FIND_PACKAGE_NAME}_VERSION})")
+    check_required_components(vectorpp)
+    message("-- Found ${type} vectorpp (version ${${CMAKE_FIND_PACKAGE_NAME}_VERSION})")
 endif()
